Bug 82287 - weston-smoke: Valgrind invalid reads
Summary: weston-smoke: Valgrind invalid reads
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium minor
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-07 08:59 UTC by francisbinns
Modified: 2014-11-11 11:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
weston-smoke valgrind output (8.69 KB, text/plain)
2014-08-07 08:59 UTC, francisbinns
Details
weston-smoke patch to fix the valgrind invalid reads. (1.79 KB, patch)
2014-08-07 09:00 UTC, francisbinns
Details | Splinter Review

Description francisbinns 2014-08-07 08:59:13 UTC
Created attachment 104209 [details]
weston-smoke valgrind output

When running the weston-smoke client application under valgrind and interacting with the app, i.e. waving the cursor over it, there are a number of invalid reads (see attached valgrind-weston-smoke.txt). When running a debug build this presents itself as invalid rendering in that there are occasional flashes of a few white pixels that immediately disappear. As far as I can tell from the git history, this bug has been around since the client was added.

I've attached a patch (0001-smoke-fix-valgrind-invalid-read-errors.patch) that fixes the issue but maybe there's a better fix.
Comment 1 francisbinns 2014-08-07 09:00:41 UTC
Created attachment 104210 [details] [review]
weston-smoke patch to fix the valgrind invalid reads.
Comment 2 Pekka Paalanen 2014-11-11 11:00:54 UTC
commit 77f7daca681f0b90457fa7a67ad5de72a3d83a75
Author: Frank Binns <frank.binns@imgtec.com>
Date:   Tue Oct 28 10:50:18 2014 +0000

    smoke: fix valgrind invalid read errors

Pushed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.